--- a/assets/style.css
+++ b/assets/style.css
@@ -34,6 +34,7 @@ body {
 }
 
 .nav a {
+	font-size: 16px;
 	text-decoration: none;
 	color: #000
 }
@@ -77,18 +78,19 @@ body {
 }
 .about-me__title {
 	margin-top: 1em;
-	margin-bottom: 60px;
+	margin-bottom: 20px;
 	font-size: 30px;
 }
 .about-me__introduction {
-	/* font-family: 'Spectral'; */
+	font-size: 18px !important;
+	font-family: 'Spectral';
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
 }
 #about-me p {
 	width: 80%;
-	font-size: 14px;
+	font-size: 16px;
 }
 
 #gallery {
