--- a/assets/style.css
+++ b/assets/style.css
@@ -43,6 +43,11 @@ body {
 	width: 20px;
 	height: 20px;
 }
+
+.sr-only { 
+	display: hidden; 
+}
+
 #about {
 	display: flex;
 	background-color: #F6D2B8;
